Modified for : Display message after authentication

--- a/Solution/WebRemina/LandingPage.htm
+++ b/Solution/WebRemina/LandingPage.htm
@@ -19,6 +19,7 @@
         <br />
         <br />
         <input type="button" ng-model="btnLogin" value="Login" ng-click="Authenticate()">
+        <p> <b><span ng-bind="User"></span></b></p>
     </div> 
 </body>
 </html>
